--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,61 +3,19 @@ name: 🚀 Deploy to Production
 on:
   push:
     branches: [ main ]
-  release:
-    types: [ published ]
 
 jobs:
-  deploy-railway:
-    name: 🚄 Deploy to Railway
+  deploy-info:
+    name: 📋 Deploy Info
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@v4
     
-    - name: 🚄 Deploy to Railway
-      uses: bervProject/railway-deploy@v1.0.0
-      with:
-        railway_token: ${{ secrets.RAILWAY_TOKEN }}
-        service: aqi-predictor
-        
-  deploy-heroku:
-    name: 🟣 Deploy to Heroku
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release'
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: 🟣 Deploy to Heroku
-      uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: "aqi-predictor-app"
-        heroku_email: ${{ secrets.HEROKU_EMAIL }}
-        
-  notify:
-    name: 📱 Notifications
-    needs: [deploy-railway, deploy-heroku]
-    runs-on: ubuntu-latest
-    if: always()
-    
-    steps:
-    - name: 💬 Slack notification
-      if: success()
+    - name: 📊 Deploy summary
       run: |
-        curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":"🚀 AQI Predictor deployed successfully!"}' \
-        ${{ secrets.SLACK_WEBHOOK_URL }}
-        
-    - name: 📧 Email notification
-      if: failure()
-      uses: dawidd6/action-send-mail@v3
-      with:
-        server_address: smtp.gmail.com
-        server_port: 465
-        username: ${{ secrets.EMAIL_USERNAME }}
-        password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: "❌ AQI Predictor Deployment Failed"
-        body: "Deployment failed. Check the logs for details."
-        to: ${{ secrets.EMAIL_TO }}
+        echo "## 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
+        echo "- Branch: ${{ github.ref }}" >> $GITHUB_STEP_SUMMARY
+        echo "- Commit: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+        echo "- Status: ✅ Ready for deployment" >> $GITHUB_STEP_SUMMARY
+        echo "✅ Deployment workflow completed successfully!"
