--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -1,8 +1,8 @@
 name: 🤖 ML Pipeline
 
 on:
-  schedule:
-    - cron: '0 8 * * *'  # 8h au lieu de 6h (plus sympa)
+# schedule:
+  #   - cron: '0 8 * * *'
   workflow_dispatch:      # Manuel trigger
     inputs:
       city:
