--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,38 @@
-# Core Dependencies
+# ==========================================================
+# 🌍 AQI Predictable - Dépendances du projet
+# ==========================================================
+
+# --- Core Dependencies ---
 streamlit>=1.28.0
 pandas>=1.5.0
 numpy>=1.24.0
 requests>=2.28.0
 
-# Machine Learning
+# --- Machine Learning ---
 scikit-learn>=1.3.0
 xgboost>=1.7.0
 joblib>=1.3.0
 
-# Data Visualization
+# --- Data Visualization ---
 plotly>=5.15.0
 matplotlib>=3.7.0
 
-# Data Processing
+# --- Data Processing ---
 python-dateutil>=2.8.0
 
-# HTTP and API
+# --- HTTP and API ---
 urllib3>=1.26.0
 
-# Environment Management
+# --- Environment Management ---
 python-dotenv>=1.0.0
 
-# Development (optional)
+# --- MLOps / Feature Store ---
+hopsworks>=3.0.0    # 🔹 Connexion Hopsworks Feature Store
+
+# --- Development (optional) ---
 pytest>=7.4.0
 flake8>=6.0.0
 black>=23.7.0
 
-# Performance
+# --- Performance ---
 psutil>=5.9.0
